--- a/templates/facture/index.html.twig
+++ b/templates/facture/index.html.twig
@@ -70,16 +70,23 @@ Factures
 
     <div class="col-md-4">
         <div class="form-group">
-            {{ form_label(form.pdfFile) }}
-            {{ form_widget(form.pdfFile, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.pdfFile) }}
+            {{ form_label(form.pdfFiles) }}
+            {{ form_widget(form.pdfFiles, {'attr': {'class': 'form-control', 'multiple': true}}) }}
+            {{ form_errors(form.pdfFiles) }}
         </div>
     </div>
+
     
 
-    <div class="col-md-2">
+    <div class="col-md-3">
         <div class="form-group">
-            <button type="submit" name="verifier" class="btn btn-primary">Vérifier Facture</button>
+            <button type="submit" name="verifier" class="btn btn-primary">Vérifier Paiements</button>
+        </div>
+    </div>
+
+      <div class="col-md-3">
+        <div class="form-group">
+             <a class="btn btn-info" href="{{ path('verify_factures')}}">vérifier échéances</a>
         </div>
     </div>
 
