--- a/templates/pdf/upload.html.twig
+++ b/templates/pdf/upload.html.twig
@@ -1,7 +1,6 @@
 {# templates/pdf/upload.html.twig #}
 
-{% extends 'basefront.html.twig' %}
-
+{% extends 'base.html.twig' %}
 {% block title %}Télécharger un fichier PDF{% endblock %}
 
 {% block body %}
