--- a/templates/ligne_facture/addfactureline.html.twig
+++ b/templates/ligne_facture/addfactureline.html.twig
@@ -1,5 +1,4 @@
-{% extends 'basefront.html.twig' %}
-
+{% extends 'base.html.twig' %}
 {% block title %}New facture{% endblock %}
 
 {% block body %}
