--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{{asset('img/favicon.png')}}" rel="icon">
+  <link href="{{asset('img/itstormlogo.png')}}" rel="icon">
   <link href="{{asset('img/logo.png')}}" rel="logo">
 
   <!-- Google Fonts -->
@@ -45,8 +45,8 @@
         <ul>
           <li ><a href="{{ path('app_facture_new') }}">Nouveau</a></li>
           <li ><a href="{{ path('app_facture_index') }}">Synthèse</a></li>
-          <li ><a href="{{ path('app_factureimpayee_index') }}">Non Payées</a></li>
-          <li ><a href="{{ path('app_facturepayee_index') }}">Payées</a></li>
+          {# <li ><a href="{{ path('app_factureimpayee_index') }}">Non Payées</a></li>
+          <li ><a href="{{ path('app_facturepayee_index') }}">Payées</a></li> #}
           
         </ul>
       </nav><!-- .nav-menu -->
