--- a/templates/facture/index.html.twig
+++ b/templates/facture/index.html.twig
@@ -230,9 +230,12 @@ Factures
                                         href="{{ path('app_facture_addline', {'id': facture.id}) }}"><span
                                             class="fas fa-edit"></span> Modifier</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
-                                        href="{{ path('send_facture_email', {'id': facture.id}) }}"><i
-                                            class="fas fa-paper-plane"></i> Envoyer</a>
+
+                                    <a id="btn-envoyer-email" class="dropdown-item btn-envoyer-email"  data-toggle="modal" data-target="#emailTypeModal" data-email-id="{{ PremierEnvoie.id }}"
+                                        data-facture-id="{{ facture.id }}">
+                                        <span class="fas fa-paper-plane"></span> Envoyer
+                                    </a>
+
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item"
                                         href="{{ path('send_facturx_email', {'id': facture.id}) }}"><i
@@ -249,9 +252,10 @@ Factures
                                             class="fas fa-check"></i> Vérifier paiement</a>
 
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
-                                        href="{{ path('send_facture_email', {'id': facture.id}) }}"><i
-                                            class="fas fa-paper-plane"></i> Renvoyer</a>
+                                     <a id="btn-envoyer-email" class="dropdown-item btn-envoyer-email"  data-toggle="modal" data-target="#emailTypeModal" data-email-id="{{ PremierEnvoie.id }}"
+                                        data-facture-id="{{ facture.id }}">
+                                        <span class="fas fa-paper-plane"></span> Renvoyer
+                                    </a>
 
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item"
@@ -336,14 +340,13 @@ Factures
                                 <div class="dropdown-menu" role="menu">
                                     <a class="dropdown-item"
                                         href="{{ path('app_facture_show', {'id': facture.id}) }}"><span
-                                            class="fa fa-eye text-dark"></span> Voir</a> 
-                                           
-                                   
+                                            class="fa fa-eye text-dark"></span> Voir</a>
+
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item"
                                         href="{{ path('send_rappel_email', {'id': facture.id}) }}"><i
                                             class="fas fa-paper-plane"></i> faire une relance</a>
-                                             <div class="dropdown-divider"></div>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{{ path('upload_pdf', {'id': facture.id}) }}"><i
                                             class="fas fa-check"></i> Revérifier paiement</a>
 
@@ -361,7 +364,7 @@ Factures
                 </table>
             </div>
             <div id="tabcon-03" class="con-box">
-                 <table class="table" id="datatable2">
+                <table class="table" id="datatable2">
                     <thead>
                         <tr>
                             <th>N° Facture</th>
@@ -391,7 +394,7 @@ Factures
                                     <a class="dropdown-item"
                                         href="{{ path('app_facture_show', {'id': facture.id}) }}"><span
                                             class="fa fa-eye text-dark"></span> Voir</a>
-                                            <div class="dropdown-divider"></div>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item"
                                         href="{{ path('send_facturx_email', {'id': facture.id}) }}"><i
                                             class="fas fa-file-invoice"></i> Envoyer factur-x</a>
@@ -412,51 +415,147 @@ Factures
         </div>
         <!-- //tab-con -->
     </div>
+    <!-- Vue modale pour modifier l'email -->
 
-</body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Vue modale pour modifier l'email -->
+    <div class="modal fade" id="emailTypeModal" tabindex="-1" aria-labelledby="emailTypeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="emailTypeModalLabel">E-mail</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                 {{ form_start(formemail) }}
+                <div class="modal-body">
+                   
+                    <div class="form-group">
+                        {{ form_label(formemail.subject) }}
+                        {{ form_widget(formemail.subject, {'attr': {'class': 'form-control col-md-12', 'id': 'subject'}}) }}
+                        {{ form_errors(formemail.subject) }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form_label(formemail.body) }}
+                        {{ form_widget(formemail.body, {'attr': {'class': 'form-control col-md-12'}, 'value': PremierEnvoie.body}) }}
+                        {{ form_errors(formemail.body) }}
+                    </div>
+
+                     <div class="form-group" style="display:none">
+                        {{ form_label(formemail.type) }}
+                        {{ form_widget(formemail.type, {'attr': {'class': 'form-control col-md-12'}}) }}
+                        {{ form_errors(formemail.type) }}
+                    </div>
+
+                    <div class="form-group" >
+                        <img src="{{ asset('img/piecejointe.png') }}" alt="PJ" class="brand-image" id="pjclick" style="width: 150px; height: 150px;animation: blink 3s infinite;">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="sendEmailButton" data-email-id="{{ PremierEnvoie.id }}" class="btn btn-success">{{ button_label|default('Envoyer') }}</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                </div>
+                 {{ form_end(formemail) }}
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-
- $(function () {
-           $("#datatable").DataTable({
-               "responsive": true, "lengthChange": false, "autoWidth": false,
-               "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-           }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-
-       });
-        $(function () {
-           $("#datatable1").DataTable({
-               "responsive": true, "lengthChange": false, "autoWidth": false,
-               "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-           }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-
-       });
-    $(function () {
-           $("#datatable2").DataTable({
-               "responsive": true, "lengthChange": false, "autoWidth": false,
-               "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-           }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-
-       });
-
-
-
-   $(".tabmenu-wrap .tab-nav")
-    .find("a")
-    .on("click", function(e) {
-        var $this = $(this);
-        var $all_tab_nav = $this.parents(".tab-nav").find(".nav");
-        var $tab_contents = $this.parents(".tabmenu-wrap").find(".con-box");
-        var id = $this.attr("href");
-        e.preventDefault();
-        $all_tab_nav.removeClass("on");
-        $this.parent().addClass("on");
-        $tab_contents.hide();
-        $(id).show();
-        // Ajouter un arrière-plan coloré à l'onglet actif
-        $all_tab_nav.css("background-color", ""); // Réinitialiser la couleur de fond
-        $this.parent().css("background-color", "rgb(239, 239, 239)");
+$(document).ready(function() {
+    $(function() {
+        $("#datatable").DataTable({
+            "responsive": true,
+            "lengthChange": false,
+            "autoWidth": false,
+            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+        }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
     });
+    $(function() {
+        $("#datatable1").DataTable({
+            "responsive": true,
+            "lengthChange": false,
+            "autoWidth": false,
+            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+        }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+    });
+    $(function() {
+        $("#datatable2").DataTable({
+            "responsive": true,
+            "lengthChange": false,
+            "autoWidth": false,
+            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+        }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+    });
+     
+$('.btn-envoyer-email').on('click', function() {
+    var factureId = $(this).data('facture-id');
+    $.ajax({
+        url: '/facture/get-facture-details/' + factureId,
+        type: 'GET',
+        success: function(response) {
+            var dateFacturation = response.dateFacturation;
+            var clientNom = response.clientNom;
+            var subject = 'Facture ' + dateFacturation + ' - ' + clientNom;
+
+            setTimeout(function() {
+                // Recherchez le champ #subject dans le modal
+                var $subjectField = $('#emailTypeModal').find('.modal-body #email_template_subject');
+                // Vérifiez s'il a été trouvé
+                if ($subjectField.length > 0) {
+                    // Définissez la valeur du champ
+                    $subjectField.val(subject);
+                    console.log("Sujet après avoir défini la valeur : " + $subjectField.val());
+
+                    // Une fois que le sujet est défini, attachez un gestionnaire d'événements à
+                    //  le bouton d'envoi pour soumettre le formulaire lorsque l'utilisateur clique dessus
+                   $('#sendEmailButton').on('click', function(event) {
+                            event.preventDefault(); // Empêche le formulaire de se soumettre de manière traditionnelle
+                             var emailId = $(this).data('email-id');
+
+                            $.ajax({
+                                url: '/email/edit/' + emailId,
+                                type: 'POST',
+                                data: $('#emailTypeModal form').serialize(),
+                                success: function(response) {
+                                console.log('Email modifié avec succès !');
+                                $.ajax({
+                                    url: '/facture/sendemail/' + factureId,
+                                    type: 'POST', 
+                                    success: function(response) {
+                                        console.log('Email envoyé avec succès !');
+                                        $('#emailTypeModal').modal('hide');
+                                    },
+                                    error: function(xhr, status, error) {
+                                        console.error('Erreur lors de l\'envoi de l\'e-mail : ' + error);
+                                    }
+                                });
+                                
+                            },
+                            error: function(xhr, status, error) {
+                                console.error('Erreur lors de la modification de l\'e-mail : ' + error);
+                            }
+                        });
+
+                       
+                    });
+                } else {
+                    console.log("Champ #subject introuvable dans le modal.");
+                }
+            }, 100);
+        },
+        error: function(xhr, status, error) {
+            // Gérez les erreurs
+            console.error(error);
+        }
+    });
+});
+
+});
 
 </script>
+
+</body>
+
 {% endblock %}
